# IRReduce

./: .gitignore  CMakeLists.txt  README.md  XLAReduce.cpp  XLAReduce.h  irreduce.cpp  irreduce.h  kaizen.h  runbuild_linx.sh  runbuild_win.bat
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
hlo/: hlo_1.txt
invariant_scripts/: is_add_present.sh  is_constant_present.sh
ir/: hlo_1.ir  ir_1.txt  ir_hlo_1.txt
ir/input/: hlo_1.ir  hlo_2.ir
ir/reduced/: hlo_1_reduced.ir
output/: hlo_1.ir
tests/: test_1.bat  test_1.sh
